MOW-501 avoid double border
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@62450 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
@@ -459,7 +459,4 @@
 		top: 0px;
 		left: 0px;
 	}
-	.mowWidget.embedContainer, .mowDoubleCanvas .mowWidget.background.embedContainer {
-		border: 1px $gray solid;
-	}
 }
